--- a/src/Panacea.Modules.WinSCard/Panacea.Modules.WinSCard.csproj
+++ b/src/Panacea.Modules.WinSCard/Panacea.Modules.WinSCard.csproj
@@ -46,6 +46,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MsBuild.Version.Targets">
+      <Version>1.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Panacea.Modularity">
       <Version>0.0.2</Version>
     </PackageReference>
